2009-09-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Templates/ProjectTemplate.cs: Downgrade
	  "fatal" error when loading templates to a normal error. Add
	  more information to the error string.

2009-09-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  No longer trying to turn on code completion on action keys
	  (like cursor keys) - should speed things up on slower
	  machines.

2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml:
	  Fixed eventargs template.

2009-09-14  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Don't close the
	  workspace if the users click on Cancel when asked to save a
	  file. Fixes bug #538371 - Canceling the closing of a
	  solution with unsaved files open does not work.

2009-09-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplateCompletionData.cs:
	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  Track API changes.

2009-09-11  Christian Hergert  <chris@dronelabs.com>

	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs: Fix exception
	  when selecting "Add to project" on new file dialog and there
	  is no project type selected.

2009-09-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs: Added DocumentParsed event.

2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs:
	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs: Worked on
	  template formatting.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Execution/MonoExecutionParameters.cs: Added
	  some localized descriptons for some property values.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Execution/MonoExecutionParameters.cs: Using
	  localizable attributes for mono execution parameters.

2009-09-09  Mike Krüger  <mkrueger@novell.com>
